<resources>
    <string name="app_name">Heart Prediction User</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Logout</string>

    <string name="menu_home">Analysis</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_doctors">Doctors</string>
    <string name="menu_feedback">Feedback</string>
    <string name="action_change_password">Change Password</string>

    <string name="check_pain">Check Pain</string>
    <string name="blood_sugar">Blood Sugar</string>
    <string name="resting_electrographic">Resting Electrographic</string>
    <string name="excercise_induced_angina">Exercise Induced Angina</string>
    <string name="slope">Slope</string>
    <string name="number_major_vessels">Number of Major Vessels (CA)</string>
    <string name="thal">Thal</string>
    <string name="rest_blood_pressure">Rest Blood Pressure</string>
    <string name="serum_cholesterol">Serum Cholesterol</string>
    <string name="maximum_heart_rate">Maximum Heart Rate Achieved (Thalach)</string>
    <string name="exercise_old_peak">ST Depression Induced by Exercise (Old Peak)</string>
    <string name="check_age">Age</string>
</resources>
